crates/protocol/tests/snapshots/snapshot_tests__class_with_properties.snap
---
source: crates/protocol/tests/snapshot_tests.rs
assertion_line: 176
expression: json
---
{
  "_type": "class",
  "name": "Person",
  "package": "model::domain",
  "properties": [
    {
      "genericType": {
        "rawType": {
          "fullPath": "String"
        }
      },
      "multiplicity": {
        "lowerBound": 1,
        "upperBound": 1
      },
      "name": "name"
    },
    {
      "genericType": {
        "rawType": {
          "fullPath": "Integer"
        }
      },
      "multiplicity": {
        "lowerBound": 0,
        "upperBound": 1
      },
      "name": "age"
    },
    {
      "aggregation": "COMPOSITE",
      "genericType": {
        "rawType": {
          "fullPath": "model::domain::Address"
        }
      },
      "multiplicity": {
        "lowerBound": 0
      },
      "name": "address"
    }
  ],
  "sourceInformation": {
    "endColumn": 1,
    "endLine": 8,
    "sourceId": "test.pure",
    "startColumn": 1,
    "startLine": 2
  },
  "stereotypes": [
    {
      "profile": "temporal",
      "value": "businesstemporal"
    }
  ],
  "superTypes": [
    "model::domain::LegalEntity"
  ],
  "taggedValues": [
    {
      "tag": {
        "profile": "doc",
        "value": "description"
      },
      "value": "A person entity"
    }
  ]
}
