crates/protocol/tests/snapshots/snapshot_tests__class_with_qualified_property.snap
---
source: crates/protocol/tests/snapshot_tests.rs
assertion_line: 630
expression: json
---
{
  "_type": "class",
  "name": "Person",
  "package": "model::domain",
  "properties": [
    {
      "genericType": {
        "rawType": {
          "fullPath": "String"
        }
      },
      "multiplicity": {
        "lowerBound": 1,
        "upperBound": 1
      },
      "name": "firstName"
    },
    {
      "genericType": {
        "rawType": {
          "fullPath": "String"
        }
      },
      "multiplicity": {
        "lowerBound": 1,
        "upperBound": 1
      },
      "name": "lastName"
    }
  ],
  "qualifiedProperties": [
    {
      "body": [
        {
          "_type": "func",
          "function": "plus",
          "parameters": [
            {
              "_type": "func",
              "function": "plus",
              "parameters": [
                {
                  "_type": "property",
                  "parameters": [
                    {
                      "_type": "var",
                      "name": "this"
                    }
                  ],
                  "property": "firstName"
                },
                {
                  "_type": "var",
                  "name": "sep"
                }
              ]
            },
            {
              "_type": "property",
              "parameters": [
                {
                  "_type": "var",
                  "name": "this"
                }
              ],
              "property": "lastName"
            }
          ]
        }
      ],
      "name": "fullName",
      "parameters": [
        {
          "_type": "var",
          "genericType": {
            "rawType": {
              "fullPath": "String"
            }
          },
          "multiplicity": {
            "lowerBound": 1,
            "upperBound": 1
          },
          "name": "sep"
        }
      ],
      "returnGenericType": {
        "rawType": {
          "fullPath": "String"
        }
      },
      "returnMultiplicity": {
        "lowerBound": 1,
        "upperBound": 1
      }
    }
  ]
}
