crates/protocol/tests/snapshots/snapshot_tests__profile.snap
---
source: crates/protocol/tests/snapshot_tests.rs
assertion_line: 236
expression: json
---
{
  "_type": "profile",
  "name": "doc",
  "package": "meta::pure::profiles",
  "sourceInformation": {
    "endColumn": 1,
    "endLine": 8,
    "sourceId": "test.pure",
    "startColumn": 1,
    "startLine": 1
  },
  "stereotypes": [
    "deprecated",
    "experimental"
  ],
  "tags": [
    "description",
    "todo"
  ]
}
